--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "lucide-react": "^0.288.0",
         "next": "13.5.6",
         "react": "^18",
+        "react-beautiful-dnd": "^13.1.1",
         "react-dom": "^18",
         "react-hook-form": "^7.47.0",
         "swiper": "^11.0.1",
@@ -39,6 +40,7 @@
     "devDependencies": {
         "@types/node": "^20",
         "@types/react": "^18",
+        "@types/react-beautiful-dnd": "^13.1.6",
         "@types/react-dom": "^18",
         "autoprefixer": "^10",
         "eslint": "^8",
